# libcircuits

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  NEWS  README  configure.ac
include/: circuit.h  vector.h
src/: Makefile.am  circuit.c  vector.c
tests/: Makefile.am  check_circuit.c  check_macros.h  check_vector.c
tests/example_inputs/: example_input.asc  test_flip_flop.asc
